bug fixes and readme